# sonar-engine

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  SESSION_CONTEXT.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  daily-pipeline.yml
alembic/: env.py
alembic/versions/: 001_initial_yield_curves.py  002_yield_curves_spot_zero_forwards_real.py  003_ratings_schema.py  004_exp_inflation_schema.py  005_crp_schema.py  006_cost_of_capital_daily.py  007_erp_schema.py  008_index_values.py  009_credit_indices_schemas.py  010_financial_indices_schemas.py  011_bis_credit_raw.py  012_economic_indices_schemas.py  013_cycle_composite_schemas.py  014_monetary_indices_schemas.py  015_monetary_cycle_composite_schema.py  016_economic_cycle_composite_schema.py  017_l5_meta_regimes_schema.py  018_erp_external_reference.py  019_rating_consolidated_notch_range_fix.py
config/: bc_targets.yaml
deploy/systemd/: README.md  sonar-daily-bis-ingestion.service  sonar-daily-bis-ingestion.timer  sonar-daily-cost-of-capital.service  sonar-daily-cost-of-capital.timer  sonar-daily-credit-indices.service  sonar-daily-credit-indices.timer  sonar-daily-curves.service  sonar-daily-curves.timer  sonar-daily-cycles.service  sonar-daily-cycles.timer  sonar-daily-economic-indices.service  sonar-daily-economic-indices.timer  sonar-daily-financial-indices.service  sonar-daily-financial-indices.timer  sonar-daily-monetary-indices.service  sonar-daily-monetary-indices.timer  sonar-daily-overlays.service  sonar-daily-overlays.timer
docs/: ARCHITECTURE.md  BRIEF_FOR_DEBATE.md  GLOSSARY.md  MIGRATION_PLAN.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SECURITY_NOTICE.md  SESSION_STATE.md  testing-strategy.md
docs/adr/: ADR-0001-linguagem-python.md  ADR-0002-arquitectura-9-layer.md  ADR-0003-db-path-sqlite-postgres.md  ADR-0004-ai-collaboration-model.md  ADR-0005-country-tiers-classification.md  ADR-0006-l5-regime-classifier.md  ADR-0007-iso-country-codes.md  ADR-0008-per-country-erp-data-constraints.md  ADR-0009-national-cb-connectors-ea-periphery.md  ADR-0010-t1-complete-before-t2-expansion.md  ADR-0011-systemd-service-idempotency.md  README.md  template.md
docs/architecture/: db-schema-reference.md
docs/backlog/: README.md  calibration-tasks.md  phase2-items.md
docs/data_sources/: D0_audit_report.md  D1_coverage_matrix.csv  D1_coverage_matrix.md  D2_empirical_validation.md  README.md  country_tiers.yaml  credit.md  economic.md  financial.md  monetary.md
docs/governance/: AI_COLLABORATION.md  DATA.md  DECISIONS.md  DOCUMENTATION.md  LICENSING.md  README.md  WORKFLOW.md  auto-commit-watcher-investigation.md
docs/milestones/: m1-us-gap-analysis.md  m1-us.md
docs/ops/: systemd-deployment.md
docs/planning/: brief-format-v2.md  brief-format-v3.md  cal-058-bis-ingestion-brief.md  credit-indices-brief-v3.md  erp-us-implementation-brief.md  f-cycle-brief.md  l3-indices-implementation-brief.md  nss-fit-algorithm-execution-brief.md  nss-persistence-tips-cal031-execution-brief.md  nss-scaffolding-execution-brief.md  overlays-spec-sweep-brief.md  p2-023-execution-brief.md  phase1-coverage-policy.md  phase1-week1-execution-plan.md  phase1-week1-retrospective.md  phase1-week2-retrospective.md  phase1-week3-retrospective.md  spec-sweep-crp-erp-brief.md  sprint-i-patch-te-cascade-brief.md  week10-day0-cleanup-brief.md  week10-infrastructure-sprint-brief.md  week10-sprint-a-ea-periphery-brief.md  week10-sprint-b-erp-t1-brief.md  week10-sprint-b-erp-t1-preflight-findings.md  week10-sprint-c-m2-output-gap-brief.md  week10-sprint-cal138-brief.md  week10-sprint-d-fr-bdf-brief.md  week10-sprint-e-curves-t1-sparse-brief.md  week10-sprint-f-cpi-infl-t1-brief.md  week10-sprint-g-it-es-curves-brief.md  week10-sprint-h-it-es-te-cascade-brief.md  week10-sprint-i-fr-te-probe-brief.md  week10-sprint-j-m4-fci-t1-brief.md  week10-sprint-j-m4-fci-t1-preflight-findings.md  week10-sprint-l-m2-ea-aggregate-brief.md  week10-sprint-m-curves-pt-nl-brief.md  week10-sprint-o-m3-t1-expansion-brief.md  week10-sprint-t-sparse-t1-sweep-au-nz-ch-se-no-dk-brief.md  week10-sprint-t0-1-monetary-async-fix-brief.md  week10-sprint-t0-prod-healing-brief.md  (+58 more)
docs/reference/: README.md
docs/specs/: README.md  template.md
docs/staging/: ROADMAP.md
docs/status/: week9-close-state.md
docs/templates/: cc-arranque-prompt.md
scripts/: install-timers.sh  uninstall-timers.sh
scripts/ops/: backfill_gb_forwards.py  sprint_merge.sh  sprint_setup.sh  systemd_audit.sh
sonar/connectors/: base.py
sonar/db/: schema_v18.sql
src/sonar/: __init__.py  config.py
tests/: conftest.py
tests/indices/: test_base.py  test_orchestrator.py  test_persistence.py
tests/integration/: test_backfill_l5.py  test_bis_ingestion.py  test_cal_113_round_trip.py  test_cli_commands.py  test_credit_indices.py  test_cycles_composites.py  test_daily_curves_multi_country.py  test_daily_curves_pipeline.py  test_daily_cycles_pipeline.py  test_daily_monetary_au.py  test_daily_monetary_ca.py  test_daily_monetary_ch.py  test_daily_monetary_dk.py  test_daily_monetary_gb_te_cascade.py  test_daily_monetary_jp.py  test_daily_monetary_m2_full_compute.py  test_daily_monetary_no.py  test_daily_monetary_nz.py  test_daily_monetary_oecd_eo_sprint_c.py  test_daily_monetary_se.py  test_daily_monetary_uk_te_cascade.py  test_daily_overlays_live.py  test_daily_overlays_live_smoke.py  test_daily_overlays_us_e2e.py  test_daily_pipelines_live.py  test_de_nss_vertical_slice.py  test_e2_m3_db_backed.py  test_e4_te_fallback.py  test_ecb_sdw_smoke.py  test_economic_indices_live.py  test_ecs_composite.py  test_ecs_smoke.py  test_f4_live_integration.py  test_fed_gsw_xval.py  test_financial_indices.py  test_fred_smoke.py  test_l5_classification_branches.py  test_l5_vertical_slice.py  test_monetary_indices_live.py  test_msc_composite.py  (+4 more)
wiki/: 01-Vision-and-Scope.md  02-Architecture-Overview.md  03-Four-Cycles.md  04-Five-Submodels.md  05-Integration-Layer.md  06-Data-Strategy.md  07-Development-Guide.md  99-Glossary.md  Home.md
(+545 files in other folders)
