[project]
name = "sonar"
version = "0.1.0"
description = "SONAR · Systematic Observatory of National Activity and Risk. Motor analítico de ciclos macro + sub-modelos quantitativos."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Hugo", email = "hugo@7365capital.com" },
]
keywords = [
    "macro",
    "finance",
    "economics",
    "cycles",
    "cost-of-capital",
    "yield-curves",
    "erp",
    "country-risk",
    "quantitative",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

# ---------------------------------------------------------------------------
# Core dependencies (production)
# ---------------------------------------------------------------------------
dependencies = [
    # Core scientific computing
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "statsmodels>=0.14",

    # HTTP & async
    "httpx>=0.27",
    "tenacity>=8.2",             # retry logic

    # Scraping & parsing
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "openpyxl>=3.1",              # Shiller, Damodaran xlsx
    "pdfplumber>=0.10",           # FactSet PDFs, Moody's
    "python-dateutil>=2.8",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # Config & validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",

    # Logging
    "structlog>=24.1",
    "rich>=13.7",

    # CLI
    "typer>=0.9",

    # Date/time
    "pytz>=2024.1",

    # Financial data helpers
    "yfinance>=0.2",              # equity indices for vol ratio

    # Orchestration
    "apscheduler>=3.10",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-recording>=0.13",     # VCR-style recording
    "hypothesis>=6.98",
    "pytest-mock>=3.12",

    # Type checking
    "mypy>=1.8",
    "types-requests",
    "types-pyyaml",
    "types-python-dateutil",
    "pandas-stubs",

    # Linting & formatting
    "ruff>=0.3",

    # Security
    "pip-audit>=2.7",
    "detect-secrets>=1.4",

    # Pre-commit
    "pre-commit>=3.6",

    # Dev tools
    "ipython>=8.20",
    "ipdb>=0.13",
    "jupyter>=1.0",
    "nbstripout>=0.7",
]

api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

dashboard = [
    "streamlit>=1.32",
    "plotly>=5.19",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

notifications = [
    "python-telegram-bot>=20.8",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

all = [
    "sonar[dev,api,dashboard,notifications,docs]",
]

# ---------------------------------------------------------------------------
# Entry points
# ---------------------------------------------------------------------------
[project.scripts]
sonar = "sonar.outputs.cli.main:app"
sonar-cli = "sonar.outputs.cli.main:app"  # alias

[project.urls]
Homepage = "https://github.com/hugocondesa-debug/sonar"
Repository = "https://github.com/hugocondesa-debug/sonar"
Documentation = "https://github.com/hugocondesa-debug/sonar/wiki"
Issues = "https://github.com/hugocondesa-debug/sonar/issues"

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sonar"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "notebooks/archived",
    "data",
    "backups",
]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez
    "ISC",     # implicit-str-concat
    "PIE",     # misc
    "PL",      # pylint subset
    "RET",     # flake8-return
    "SIM",     # flake8-simplify
    "ARG",     # unused arguments
    "PTH",     # use pathlib
    "RUF",     # ruff-specific
    "FBT",     # boolean positional args
    "EM",      # error messages
    "T20",     # print statements (warn, use logging)
    "PT",      # pytest style
    "Q",       # quotes
    "TID",     # tidy imports
    "TCH",     # type-checking
]
ignore = [
    "PLR0913",   # too many arguments (sometimes needed)
    "ISC001",    # conflicts with formatter
    "EM101",     # exception must not use string literal (verbose)
    "EM102",     # f-string in exception
    "FBT001",    # boolean positional — false positive frequent
    "FBT002",    # boolean default — false positive frequent
    "PLR2004",   # magic value (noise in scientific code)
]
unfixable = [
    "F401",      # unused imports (manual review)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004",   # magic values OK in tests
    "S101",      # assert OK in tests
    "ARG",       # unused args OK in tests (fixtures)
]
"scripts/*" = [
    "T20",       # print OK in scripts
]
"__init__.py" = [
    "F401",      # re-exports
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["sonar"]
combine-as-imports = true

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "pdfplumber.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=sonar",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=60",        # start low, raise over time
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: tests that take >1s or require network",
    "integration: end-to-end integration tests",
    "property: hypothesis property tests",
    "manual: manual validation scripts (skipped in CI)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pandas.*",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["sonar"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/settings.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
